--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 apio.py
+tcpclient.py 
+servertest.py
+serverst.py
+data from json.py
+clientrequestt.json
+NiceServer.py
+Newserver.py
+Newclient.py
+Newclient copy.py
+Group_GAFlight.json
+FinalServer.py
+FInalClient.py
